Keep fixed validation icon, just change visibility
Keep fixed validation icon, just change its visibility so that new problem rows' delete button also remains aligned horizontally.

--- a/web/static/css/output.css
+++ b/web/static/css/output.css
@@ -1126,6 +1126,10 @@ video {
   display: flex;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
 .\!table {
   display: table !important;
 }
@@ -1268,10 +1272,6 @@ video {
 }
 
 .flex-shrink-0 {
-  flex-shrink: 0;
-}
-
-.shrink-0 {
   flex-shrink: 0;
 }
 
